--- a/single.html
+++ b/single.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+	<!--favicon-->
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -20,6 +21,7 @@
 
 
 </head>
+<!--burgermenu i højre hjørne (skjult i desktop)-->
 
 <body class="single-page">
 	<div class="nav-knap">
@@ -37,6 +39,7 @@
 	</div>
 	<header id="forsiden">
 		<div class="darkwrapper">
+			<!--	nav-menu til mobile-filtrering - skjult i moblile view - kaldes via navMenu()-->
 			<nav>
 				<ul>
 					<li><a href="index.html#forsiden">Forsiden</a></li>
@@ -53,6 +56,7 @@
 	<main>
 		<section id="menu">
 			<div class="content">
+				<!--indhenter data fra loopet visMenu() til visning af den valgte ret-->
 				<div class="data-container">
 					<article class="menuitem">
 						<div class="tilbage-wrapper"><span><button class="tilbage" aria-label="Gå tilbage">Tilbage</button></span>
